# python-utils-loader

./: .gitignore  README.md  package.base.dockerfile  pyproject.toml
.github/workflows/: package-python.yml  release.yml  test.yml
data/: sample.json  sample.yaml
src/surquest/utils/loader/: __init__.py  loader.py
test/: pytest.ini  run.test.sh
test/loader/: test_dictdot.py  test_loader.py
